# obsidian-agent

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENT_FIX_INSTRUCTIONS.md  ARCHITECTURE.md  BUG_FIXES.md  CHANGELOG.md  COMPLETE-SETUP.bat  CONTINUE-SETUP.bat  CONTRIBUTING.md  DEPLOYMENT_STATUS.txt  DEVELOPER.md  DIRECTORY_STRUCTURE.md  ENVIRONMENT_SETUP.md  EXAMPLES.md  GAP_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  LAUNCH.bat  LICENSE  PHASE2_FINAL_STATUS.md  PHASE2_RC1_STATUS.md  PHASE3B_OPTIMIZATIONS.md  PHASE3B_RESOLUTION_COMPLETE.md  PHASE3_GITHUB_UPDATE_COMPLETE.md  PLUGIN_SUMMARY.md  PRODUCTION_OPTIMIZATIONS.md  PYTHON_BACKEND_GUIDE.md  QUALITY_STANDARDS_PLAN.md  QUERY_KNOWLEDGE_BASE.bat  QUICK-SETUP.bat  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_phase3c.md  (+101 more)
apps/pkm-agent/: FINAL_SIGNOFF_CHECKLIST.md  GO_LIVE_CHECKLIST.md  NEXT_STEPS.md  OPTIMIZATION_PLAN.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_CHECKPOINT.md  PHASE3_EXECUTION_REPORT.md  PHASE3_QUICKSTART.md  PHASE3_RELEASE_NOTES.md  PHASE3_SUMMARY.md  README.md  README_UPDATES.md  RELEASE_SUMMARY.md  SECURITY_INTEGRATION_COMPLETE.md  SESSION_SUMMARY.md  pyproject.toml
apps/pkm-agent/.github/workflows/: quality-gates.yml
apps/pkm-agent/scripts/: benchmark.py  release_signoff.ps1
apps/pkm-agent/src/pkm_agent/: __init__.py  __main__.py  app.py  app_enhanced.py  audit_logger.py  cache_manager.py  cli.py  cli_enhanced.py  config.py  exceptions.py  react_agent.py  security.py  tui.py  websocket_sync.py
apps/pkm-agent/src/pkm_agent/agentzero/: __init__.py  orchestrator.py
apps/pkm-agent/src/pkm_agent/api/: __init__.py  server.py
apps/pkm-agent/src/pkm_agent/data/: __init__.py  database.py  indexer.py
apps/pkm-agent/src/pkm_agent/llm/: __init__.py  base.py  ollama_provider.py  openai_provider.py
apps/pkm-agent/src/pkm_agent/rag/: __init__.py  chunker.py  embeddings.py  retriever.py  vectorstore.py
apps/pkm-agent/tests/: test_config.py  test_phase1.py  test_security.py  test_tui_panels.py
apps/pkm-agent/tests/e2e/: test_pipeline_success.py  test_rollback_integrity.py  test_security_regression.py
apps/pkm-agent/tests/fixtures/: generate_vaults.py
apps/pkm-agent/tests/fixtures/vaults/large/: 20230515-education-framework-1000.md  20230516-science-analysis-999.md  20230517-technology-practice-998.md  20230518-education-analysis-997.md  20230519-science-practice-996.md  20230520-education-analysis-995.md  20230521-science-strategy-994.md  20230522-science-framework-993.md  20230523-health-practice-992.md  20230524-technology-framework-991.md  20230525-business-analysis-990.md  20230526-business-framework-989.md  20230527-business-research-988.md  20230528-science-strategy-987.md  20230529-business-analysis-986.md  20230530-business-strategy-985.md  20230531-business-analysis-984.md  20230601-science-theory-983.md  20230602-technology-analysis-982.md  20230603-business-practice-981.md  20230604-health-practice-980.md  20230605-technology-strategy-979.md  20230606-technology-analysis-978.md  20230607-business-framework-977.md  20230608-education-strategy-976.md  20230609-education-method-975.md  20230610-education-analysis-974.md  20230611-science-method-973.md  20230612-technology-practice-972.md  20230613-technology-theory-971.md  20230614-health-analysis-970.md  20230615-education-theory-969.md  (+968 more)
obsidian-agent-apps/obsidian-mcp/: .env.example  .gitignore  DEPLOY_TO_GITHUB.md  FINAL_SUMMARY.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  claude_desktop_config.json  push-to-github.bat  pyproject.toml  requirements.txt
obsidian-agent-apps/obsidian-mcp/obsidian_mcp/: __init__.py  cli.py  client.py  config.py  exceptions.py  server.py
obsidian-agent-apps/obsidian-mcp/obsidian_mcp/tools/: __init__.py  canvas_tools.py  external_tools.py  folder_tools.py  link_tools.py  note_tools.py  search_tools.py  tag_tools.py  template_tools.py
pkm-agent/: README.md  pyproject.toml
pkm-agent/src/pkm_agent/: __init__.py  cli.py  errors.py  sync.py  watcher.py
python_backend/: .gitignore  README.md  pyproject.toml
python_backend/src/obsidian_agent/: __init__.py  cli.py  config.py  errors.py  health.py  retry.py
python_backend/src/obsidian_agent/api/: __init__.py  app.py  dependencies.py  models.py  routes.py
python_backend/src/obsidian_agent/cache/: __init__.py  cache_manager.py  embedding_cache.py
python_backend/src/obsidian_agent/connectors/: __init__.py  base.py  notion.py  readwise.py
python_backend/src/obsidian_agent/database/: __init__.py  connection.py  models.py
python_backend/src/obsidian_agent/export/: __init__.py  backup.py  exporter.py
python_backend/src/obsidian_agent/extractors/: __init__.py  image_extractor.py  pdf_extractor.py
python_backend/src/obsidian_agent/features/: __init__.py  duplicates.py  linking.py  organization.py  summarization.py  templates.py
python_backend/src/obsidian_agent/graph/: __init__.py  graph_builder.py
python_backend/src/obsidian_agent/indexing/: __init__.py  indexer.py  parser.py
python_backend/src/obsidian_agent/nlp/: __init__.py  query_engine.py
python_backend/src/obsidian_agent/plugins/: __init__.py  base.py
python_backend/src/obsidian_agent/review/: __init__.py  flashcard.py  scheduler.py
python_backend/src/obsidian_agent/search/: __init__.py  search_service.py
python_backend/src/obsidian_agent/security/: __init__.py  encryption.py
python_backend/src/obsidian_agent/temporal/: __init__.py  search.py
python_backend/src/obsidian_agent/vault/: __init__.py  vault_manager.py
python_backend/src/obsidian_agent/vector_store/: __init__.py  chromadb_store.py
python_backend/src/obsidian_agent/voice/: __init__.py  transcriber.py
python_backend/src/obsidian_agent/watcher/: __init__.py  file_watcher.py
python_backend/src/obsidian_agent/writing/: __init__.py  assistant.py
python_backend/tests/: conftest.py  test_config.py  test_errors.py  test_features.py  test_parser.py  test_retry.py
(+664 files in other folders)
