[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-agent"
version = "0.1.0"
description = "Python backend for Obsidian Agent - vault indexing and search"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "B0LK13"}
]
dependencies = [
    "click>=8.1.0",
    "whoosh>=2.7.4",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
    "python-frontmatter>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
obsidian-agent = "obsidian_agent.cli:main"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
