[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkm-agent"
version = "0.1.0"
description = "Personal Knowledge Management Agent - Python backend for Obsidian Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "B0LK13"}
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "watchdog>=3.0.0",
    "python-frontmatter>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
pkm-agent = "pkm_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pkm_agent"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"
asyncio_mode = "auto"
