[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-mcp"
version = "1.0.0"
description = "Comprehensive MCP server for Obsidian with 46+ tools for note management, graph analysis, and AI integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Obsidian MCP Team", email = "team@obsidian-mcp.dev"}
]
keywords = ["mcp", "obsidian", "notes", "knowledge-graph", "ai", "pkm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "networkx>=3.2.0",
    "python-dateutil>=2.8.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "structlog>=23.2.0",
    "regex>=2023.0.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.cli:main"
obsidian-server = "obsidian_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["obsidian_mcp*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
